# AI-Projects

./: README.md  __init__ (1).py  __init__ (5).py  __init__ (6).py  __init__ (8).py  __init__.py  chunker.py  prompts.py  trend_analyzer.py
ORION/: Readme.md  container.py  pyproject.toml  requirements.txt
ORION/actions/: base.py  email_action.py  jira_action.py  validator.py
ORION/api/: main.py
ORION/api/routes/: ingestion.py  insights.py  query.py
ORION/cli/: bot.py
ORION/ingestion/: chunker.py  pdf_loader.py  pipeline.py
ORION/insights/: engine.py
ORION/llm/: client.py  prompts.py  rag_chain.py
ORION/models/: schemas.py
ORION/retrieval/: bm25_search.py  embeddings.py  hybrid_search.py  reranker.py  vector_store.py
ORION/tests/: test_api.py  test_chunker.py  test_hybrid_search.py
ORION/utils/: cache.py  config.py  logger.py
it-service-chatbot/: Dockerfile  README.md  hadoop_chatbot.py  k8s-deployment.yaml  main.py  requirements.txt
sql-rag-splunk-project/: Dockerfile  README.md  docker-compose.yml  requirements.txt
sql-rag-splunk-project/app/: config.py  main.py
sql-rag-splunk-project/app/actions/: approval_workflow.py  jira_actions.py  outlook_actions.py
sql-rag-splunk-project/app/agents/: email_draft_agent.py  (+3 more)
sql-rag-splunk-project/config/: app_config.yaml  dataset_registry.yaml
sql-rag-splunk-project/data/: vulnerability_events_sample.csv
sql-rag-splunk-project/docs/: architecture.md  scaling_to_multiple_datasets.md  security_guidelines.md
sql-rag-splunk-project/scripts/: init_db.py
sql-rag-splunk-project/tests/: test_intent_router.py  test_sql_guardrails.py
(+19 files in other folders)
